# csse4011_personal

oslib/scu_drivers/scu_sensors/: air_quality_sensor.c  air_quality_sensor.h  motion_sensor.c  motion_sensor.h  temp_humidity_sensor.c  temp_humidity_sensor.h  temp_pressure_sensor.c  temp_pressure_sensor.h
prac1/scu/: CMakeLists.txt  prj.conf
prac1/scu/src/: main.c
